@@ -27,6 +27,8 @@ sediffx:
   * Click upon AV rules' permissions to show line numbers that
     contributed just that permission, rather than the entire AV rule.
 
+  * Support for type joins and splits within the type remap dialog.
+
 ==================================================
 
 SETools 3.1:
